--- a/_posts/2012-10-24-烂代码外科手术分享.markdown
+++ b/_posts/2012-10-24-烂代码外科手术分享.markdown
@@ -6,12 +6,12 @@ title: 烂代码外科手术分享
 #烂代码外科手术分享
 ======================
 ##好代码和烂代码区分在哪里
- 1.	满足业务需求，完成功能;
- 2. 代码风格统一（规范合理进行分行、缩进、空格），注释完整;
- 1. 模式的选择和代码设计,考虑好适合的模式来进行开发，是好代码实现的前提;
-—	设计好清晰明确的调用接口，简单有效的成员设置;
--	代码实现用最简单的、最短距离;
-—	……
+– 满足业务需求，完成功能;
+– 代码风格统一（规范合理进行分行、缩进、空格），注释完整;
+– 模式的选择和代码设计,考虑好适合的模式来进行开发，是好代码实现的前提;
+— 设计好清晰明确的调用接口，简单有效的成员设置;
+– 代码实现用最简单的、最短距离;
+— ……
 
 ----------------------
 ##我的代码的改进过程，几个项目或者日常：
