--- a/_posts/2012-10-24-烂代码外科手术分享.markdown
+++ b/_posts/2012-10-24-烂代码外科手术分享.markdown
@@ -6,12 +6,14 @@ title: 烂代码外科手术分享
 #烂代码外科手术分享
 ======================
 ##好代码和烂代码区分在哪里
-– 满足业务需求，完成功能;
-– 代码风格统一（规范合理进行分行、缩进、空格），注释完整;
-– 模式的选择和代码设计,考虑好适合的模式来进行开发，是好代码实现的前提;
-— 设计好清晰明确的调用接口，简单有效的成员设置;
-– 代码实现用最简单的、最短距离;
+
+– 满足业务需求，完成功能
+– 代码风格统一（规范合理进行分行、缩进、空格），注释完整
+– 模式的选择和代码设计,考虑好适合的模式来进行开发，是好代码实现的前提
+— 设计好清晰明确的调用接口，简单有效的成员设置
+– 代码实现用最简单的、最短距离
 — ……
+
 
 ----------------------
 ##我的代码的改进过程，几个项目或者日常：
@@ -23,7 +25,7 @@ title: 烂代码外科手术分享
 * 开头没有对整个代码有完整的必要的概述；
 * 结构与数据没有分离；
 * 对代码没有设计，没有功能上的模块区分，纯面向过程的编码；
-*  ……
+* ……
 ####总结：阅读和维护，都是一件令人头痛的事情，因为已经有上述问题了，已经可以把这个代码定论为烂代码。
 
 
@@ -31,7 +33,7 @@ title: 烂代码外科手术分享
 * 有必要的完整的注释，有参数的函数，对参数有注释描述；
 * 代码风格统一，私用成员和公用成员用下划线区分，基本符合jslint的风格；
 * 使用构造函数、单体等模式，对闭包的理解和使用；
-* 使用模板引擎，数据和展示分离；
+* 使用模板引擎，数据和展示分离(MVC)；
 * 初始化实例的基本参数使用方式简练；
 * 接口支持事件；
 
@@ -51,7 +53,9 @@ title: 烂代码外科手术分享
 
 ----------------------
 ##我的话
- 1. 重构代码的机会并不多，要珍惜“写烂代码的机会”，认识到不足，积极去改变，自己写的代码，要注意积累和积极优化
+ 1. 重构代码的机会并不多，要珍惜“写烂代码的机会”，作为改进的基础和参照；
+ 2. 积极review和阅读好的代码，才能发现自己代码的不足；
+ 3. 代码要注意积累，有好的想法要积极优化或重构；
  
 ##end
 
