--- a/_posts/2012-10-24-烂代码外科手术分享.markdown
+++ b/_posts/2012-10-24-烂代码外科手术分享.markdown
@@ -14,6 +14,10 @@ title: 烂代码外科手术分享
 – 代码实现用最简单的、最短距离
 — ……
 
+- 网站下辖站点所需的全局变量和函数，包括所有子站共通的部分
+- 子站外框（公共头尾）
+- 网页主体内容
+- 组件
 
 ----------------------
 ##我的代码的改进过程，几个项目或者日常：
