--- a/_posts/2012-10-24-烂代码外科手术分享.markdown
+++ b/_posts/2012-10-24-烂代码外科手术分享.markdown
@@ -1,7 +1,6 @@
 ---
 layout: blog-template
 title: 烂代码外科手术分享
-guid: urn:uuid:f47c5329-afdf-4667-bc61-307da0c0b76d
 ---
 
 #烂代码外科手术分享
@@ -20,13 +19,13 @@ guid: urn:uuid:f47c5329-afdf-4667-bc61-307da0c0b76d
 ##我的代码的改进过程，几个项目或者日常：
 ###从去年年底开发的保险后台项目，
 ####时隔大半年，现在回头看看当初的保险后台项目的代码，基本情况如下
-* 功能都能实现，不得不庆幸有这样的后台页面作为练手的机会；
-* 代码没有规范，缩进不统一，没能合理使用空格，注释不完整；
-* 每个函数都有功能的描述，没有对函数参数的注释；
-* 开头没有对整个代码有完整的必要的概述；
-* 结构与数据没有分离；
-* 对代码没有设计，没有功能上的模块区分，纯面向过程的编码；
-* ……
+*	功能都能实现，不得不庆幸有这样的后台页面作为练手的机会；
+*	代码没有规范，缩进不统一，没能合理使用空格，注释不完整；
+*	每个函数都有功能的描述，没有对函数参数的注释；
+*	开头没有对整个代码有完整的必要的概述；
+*	结构与数据没有分离；
+*	对代码没有设计，没有功能上的模块区分，纯面向过程的编码；
+*	……
 ####总结：阅读和维护，都是一件令人头痛的事情，因为已经有上述问题了，已经可以把这个代码定论为烂代码。
 
 
@@ -39,14 +38,14 @@ guid: urn:uuid:f47c5329-afdf-4667-bc61-307da0c0b76d
 * 接口支持事件；
 
 ----------------------
-##怎么样保持自己的代码是好代码
+##如何保持代码质量
  1. 同样的代码结构或者设计，放到不同的场景，好代码也会变成烂代码；
- 1. 熟练掌握常用的设计模式，熟悉其适用的场景，在合适的场景使用合适的模式；
- 1. 共同开发项目的时候，制定并且遵守好代码的开发规范；
- 1. 以易读和维护性作为代码开发的硬性指标，预留好满足当前需求以外的合理扩展空间；
+ 2. 熟练掌握常用的设计模式，熟悉其适用的场景，在合适的场景使用合适的模式；
+ 3. 共同开发项目的时候，制定并且遵守好代码的开发规范；
+ 4. 以易读和维护性作为代码开发的硬性指标，预留好满足当前需求以外的合理扩展空间；
  
 ----------------------
-##关于好代码烂代码的相关文章
+##好代码烂代码的相关文章
  1. [代码规范](http://www.haogongju.net/art/1633643)
  2. [不要轻易去认定一段代码是表面看上去那么烂，没有了解整个程序的方案之前，无法轻易的判断代码的好坏](http://parazzi.me/2011/06/write-your-code-sucks.html)
  3. [优雅的代码](http://kb.cnblogs.com/page/82643/)
