--- a/_posts/2012-10-24-烂代码外科手术分享.markdown
+++ b/_posts/2012-10-24-烂代码外科手术分享.markdown
@@ -30,12 +30,12 @@ title: 烂代码外科手术分享
 
 
 ###到瀑布流的开发和重构；
-* 有必要的完整的注释，有参数的函数，对参数有注释描述；
-* 代码风格统一，私用成员和公用成员用下划线区分，基本符合jslint的风格；
-* 使用构造函数、单体等模式，对闭包的理解和使用；
-* 使用模板引擎，数据和展示分离(MVC)；
-* 初始化实例的基本参数使用方式简练；
-* 接口支持事件；
+>   有必要的完整的注释，有参数的函数，对参数有注释描述；
+>   代码风格统一，私用成员和公用成员用下划线区分，基本符合jslint的风格；
+>   使用构造函数、单体等模式，对闭包的理解和使用；
+*   使用模板引擎，数据和展示分离(MVC)；
+*   初始化实例的基本参数使用方式简练；
+*   接口支持事件；
 
 ----------------------
 ##如何保持代码质量
