--- a/_posts/2012-10-24-烂代码外科手术分享.markdown
+++ b/_posts/2012-10-24-烂代码外科手术分享.markdown
@@ -19,6 +19,7 @@ title: 烂代码外科手术分享
 ##我的代码的改进过程，几个项目或者日常：
 ###从去年年底开发的保险后台项目，
 ####时隔大半年，现在回头看看当初的保险后台项目的代码，基本情况如下
+
 *	功能都能实现，不得不庆幸有这样的后台页面作为练手的机会；
 *	代码没有规范，缩进不统一，没能合理使用空格，注释不完整；
 *	每个函数都有功能的描述，没有对函数参数的注释；
@@ -30,15 +31,17 @@ title: 烂代码外科手术分享
 
 
 ###到瀑布流的开发和重构；
->   有必要的完整的注释，有参数的函数，对参数有注释描述；
->   代码风格统一，私用成员和公用成员用下划线区分，基本符合jslint的风格；
->   使用构造函数、单体等模式，对闭包的理解和使用；
+
+*   有必要的完整的注释，有参数的函数，对参数有注释描述；
+*   代码风格统一，私用成员和公用成员用下划线区分，基本符合jslint的风格；
+*   使用构造函数、单体等模式，对闭包的理解和使用；
 *   使用模板引擎，数据和展示分离(MVC)；
 *   初始化实例的基本参数使用方式简练；
 *   接口支持事件；
 
 ----------------------
 ##如何保持代码质量
+
  1. 同样的代码结构或者设计，放到不同的场景，好代码也会变成烂代码；
  2. 熟练掌握常用的设计模式，熟悉其适用的场景，在合适的场景使用合适的模式；
  3. 共同开发项目的时候，制定并且遵守好代码的开发规范；
