提交一个基本完整的版本

--- a/_posts/2012-10-24-landaima.markdown
+++ b/_posts/2012-10-24-landaima.markdown
@@ -2,10 +2,9 @@
 layout: blog-template
 title: 烂代码外科手术分享
 cover: http://img02.taobaocdn.com/tps/i2/T1NF7bXXXjXXblQ4v1-696-338.jpg
+summary: 保持统一、规范的代码风格是让代码成为好代码的第一步，很多细节的东西，都是需要需要养成固定的习惯。
 ---
 
-#烂代码外科手术分享
-======================
 ##好代码和烂代码区分在哪里
 
 1. 满足业务需求，完成功能
