--- a/_posts/2012-10-26-zhengze.markdown
+++ b/_posts/2012-10-26-zhengze.markdown
@@ -1,8 +1,8 @@
 ---
 layout: blog-template
 title: 正则表达式系统教程
+summary: 正则表达式的一些快捷速记语句，分享来的。
 ---
-#正则表达式系统教程
 
 	正则其实也势利，削尖头来把钱揣； （指开始符号^和结尾符号$）
 	特殊符号认不了，弄个倒杠来引路； （指\. \*等特殊符号）
